k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nlp-web
  namespace: nlp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nlp-web
  template:
    metadata:
      labels:
        app: nlp-web
    spec:
      containers:
        - name: nlp-web
          image: ma7moudrafaat/hrappdotnet:V1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
