k8s/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nlp-web-svc
  namespace: nlp
spec:
  type: ClusterIP
  selector:
    app: nlp-web
  ports:
    - port: 80
      targetPort: 8080
