k8s/ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ing
  namespace: argocd
spec:
  ingressClassName: nginx
  rules:
  - host: argocd.internal.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ing
  namespace: vault
spec:
  ingressClassName: nginx
  rules:
  - host: vault.internal.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vault
            port:
              number: 8200
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus-ing
  namespace: nexus
spec:
  ingressClassName: nginx
  rules:
  - host: nexus.internal.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nexus-nexus-repository-manager
            port:
              number: 8081
