k8s/ingresses.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nlp-web
  namespace: myapp
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /\$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /nlp(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: nlp-web
                port:
                  number: 80
